bootstrap: Don't rely on DNS when waiting for the controller route
Signed-off-by: Lewis Marshall <lewis@lmars.net>

--- a/bootstrap/manifest_template.json
+++ b/bootstrap/manifest_template.json
@@ -235,7 +235,8 @@
   {
     "id": "controller-route-wait",
     "action": "wait",
-    "url": "http://{{ or (getenv \"CONTROLLER_DOMAIN\") \"localhost\" }}",
+    "url": "discoverd+http://router-http/",
+    "host": "{{ or (getenv \"CONTROLLER_DOMAIN\") \"localhost\" }}",
     "status": 401
   },
   {
